--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "migrate:latest": "knex migrate:latest",
+    "migrate:make": "knex migrate:make",
+    "migrate:rollback": "knex migrate:rollback",
+    "seed:make": "knex seed:make",
+    "seed:run": "knex seed:run",
+    "cleandb": "knex migrate:rollback && knex migrate:latest && knex seed:run"
   },
   "repository": {
     "type": "git",
@@ -15,6 +21,7 @@
     "crypto": "^1.0.1",
     "express": "^4.17.1",
     "express-flash": "^0.0.2",
+    "express-rate-limit": "^5.1.3",
     "express-session": "^1.17.1",
     "knex": "^0.21.1",
     "mysql": "^2.18.1",
