--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "url": "git+https://github.com/nickkisbye/4.-Semester-exam.git"
   },
   "dependencies": {
+    "aws-sdk": "^2.680.0",
     "bcrypt": "^4.0.1",
     "crypto": "^1.0.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.7-alpha.3",
     "express-flash": "^0.0.2",
     "express-rate-limit": "^5.1.3",
     "express-session": "^1.17.1",
