--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "knex": "^0.21.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.4",
-    "objection": "2.1.3"
+    "objection": "2.1.3",
+    "socket.io": "^2.3.0"
   },
   "keywords": [],
   "author": "",
