--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "mysql": "^2.18.1",
     "nodemon": "^2.0.4",
     "objection": "2.1.3",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "stripe": "^8.63.0"
   },
   "keywords": [],
   "author": "",
