--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-session": "^1.17.1",
     "knex": "^0.21.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.4.8",
     "nodemon": "^2.0.4",
     "objection": "2.1.3",
     "socket.io": "^2.3.0",
